# ai

./: AGENTS.md  LICENSE  README.md  pyproject.toml
agents/agent-designer/: agent-designer.agent.md
agents/ba-assistant/: README.md  ba-assistant.agent.md
agents/commit/: commit.agent.md
agents/feature-designer/: feature-designer.agent.md
agents/sda/: sda-dev.agent.md  sda-feature-designer.agent.md  sda-init.agent.md
agents/system-designer/: system-designer.md
agents/tdd-workflow/: README.md  feature-designer.agent.md  tdd-implementer.agent.md  tdd-quality-gate.agent.md  tdd-research.agent.md  tdd-test-writer.agent.md  tdd-tool-discovery.agent.md  tdd-workflow.agent.md
agents/tdd-workflow-v2/: README.md  feature-designer.agent.md  implementer.agent.md  init.agent.md  test-writer.agent.md
agents/ts-tutor/: ts-tutor.agent.md
prompts/tdd/: README.md  development-workflow.md  method-of-work.md  tool-discovery.md
resources/: AGENTS.md  README.md  common-standards.md  development-workflow.md
resources/java/: tool-discovery.md
resources/python/: tool-discovery.md
resources/typescript/: tool-discovery.md
scripts/: install-dev-suite.bat  update-agent.ps1  update-skill.ps1  update-standards-compliance.ps1  update-tool.ps1
skills/agents_md_creator/: SKILL.md
skills/commit/: SKILL.md
skills/development-guidance/: SKILL.md
skills/repo-onboarding/: README.md  SKILL.md
skills/standards-compliance/: README.md  SKILL.md
skills/troubleshooting/: README.md  SKILL.md
src/ai_tools/: __init__.py
tools/sda/: AGENTS.md  README.md
(+36 files in other folders)
